--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,11 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^7.4|^8.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1.50",
+        "phpoffice/phpspreadsheet": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
